Add signal handlers for SIGINT, SIGCHLD and SIGTSTP

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 FLAGS = -O2 -lpthread
 
 compile:
-	gcc main.c job.c csapp.c $(FLAGS) -o ../install/bin/main
-	gcc infinite_loop.c -o ../install/bin/infinite_loop
+	gcc main.c signal_handler.c job.c csapp.c $(FLAGS) -o ../install/bin/main
+	gcc infinite_loop.c csapp.c -o ../install/bin/infinite_loop
 
 run:
 	../install/bin/main
