--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,9 @@
-FLAGS = -O2 -lpthread
+FLAGS = -pthread -m64
 
 compile:
 	gcc main.c signal_handler.c job.c csapp.c $(FLAGS) -o ../install/bin/main
-	gcc infinite_loop.c csapp.c -o ../install/bin/infinite_loop
-
-run:
-	../install/bin/main
-
+	gcc 10sec_loop.c csapp.c -o ../install/bin/loop
+	
 clean:
 	rm -rf ../install/bin/main
 
