Edit compile options for foo.c

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ FLAGS = -pthread -m64
 
 compile:
 	gcc main.c signal_handler.c job.c csapp.c $(FLAGS) -o ../install/bin/main
-	gcc foo.c csapp.c -o ../install/bin/foo
+	gcc foo.c -o ../install/bin/foo
 	gcc loop.c -o ../install/bin/loop
 	
 clean:
