Change executable file name from main to lsh

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 FLAGS = -pthread -m64
 
 compile:
-	gcc main.c utilities.c signal_handler.c job.c csapp.c $(FLAGS) -o ../install/bin/main
+	gcc main.c utilities.c signal_handler.c job.c csapp.c $(FLAGS) -o ../install/bin/lsh
 	gcc foo.c -o ../install/bin/foo
 	gcc loop.c -o ../install/bin/loop
 	
